Allow proxy authentication when attempting to retrieve favorite icons.

BUG: 135596
FIXED-IN: 4.9.2